--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,11 +1,12 @@
-name: Build
+name: Release
 
 on:
   push:
-  pull_request:
+    tags:
+      - "*"
 
 jobs:
-  build:
+  goreleaser:
     runs-on: ubuntu-latest
     steps:
       - name: Install Go
@@ -14,7 +15,7 @@ jobs:
           go-version: 1.13
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Install goimports
-        run: go get golang.org/x/tools/cmd/goimports
-      - name: Make all
-        run: make all
+      - name: Create release
+        uses: goreleaser/goreleaser-action@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GORELEASER_TOKEN }}
