--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,14 @@ name: Build
 
 on:
   push:
+    branches:
+      - "*"
+    tags-ignore:
+      - "*"
   pull_request:
+    types:
+      - opened
+      - reopened
 
 jobs:
   build:
@@ -23,6 +30,10 @@ jobs:
           go-version: 1.13
       - name: Checkout code
         uses: actions/checkout@v2
+      - uses: actions/cache@v1
+        with:
+          path: /home/runner/go/pkg/mod
+          key: go-mod
       - name: Build install and validate against examples
         run: |
           make install-linux
