--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,7 +15,14 @@ jobs:
           go-version: 1.13
       - name: Checkout code
         uses: actions/checkout@v2
+      - uses: actions/cache@v1
+        with:
+          path: /home/runner/go/pkg/mod
+          key: go-mod
       - name: Create release
         uses: goreleaser/goreleaser-action@v2.2.1
         env:
           GITHUB_TOKEN: ${{ secrets.GORELEASER_TOKEN }}
+        with:
+          version: latest
+          args: release --rm-dist
