--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,19 +9,24 @@ jobs:
   goreleaser:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Unshallow
+        run: git fetch --prune --unshallow
       - name: Install Go
         uses: actions/setup-go@v2
         with:
           go-version: 1.13
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - uses: actions/cache@v2.1.2
-        with:
-          path: /home/runner/go/pkg/mod
-          key: go-mod
+      - name: Import GPG key
+        id: import_gpg
+        uses: paultyng/ghaction-import-gpg@v2.1.0
+        env:
+          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+          PASSPHRASE: ${{ secrets.PASSPHRASE }}
       - name: Create release
         uses: goreleaser/goreleaser-action@v2.2.1
         env:
+          GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
           GITHUB_TOKEN: ${{ secrets.GORELEASER_TOKEN }}
         with:
           version: latest
