chore: update ci tf versions

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,7 +12,7 @@ on:
       - reopened
 
 jobs:
-  build:
+  build-tf-0-13:
     runs-on: ubuntu-latest
     steps:
       - name: Install goimports
@@ -94,7 +94,32 @@ jobs:
         run: go get golang.org/x/tools/cmd/goimports
       - name: Install terraform
         run: |
-          TERRAFORM_VERSION=1.0.1
+          TERRAFORM_VERSION=1.0.11
+          curl -LO https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip
+          unzip terraform_${TERRAFORM_VERSION}_linux_amd64.zip
+          sudo mv terraform /usr/local/bin
+          rm *
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.16
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - uses: actions/cache@v2.1.7
+        with:
+          path: /home/runner/go/pkg/mod
+          key: go-mod
+      - name: Build install and validate against examples
+        run: |
+          make examples-15
+  build-tf-1-1:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install goimports
+        run: go get golang.org/x/tools/cmd/goimports
+      - name: Install terraform
+        run: |
+          TERRAFORM_VERSION=1.1.3
           curl -LO https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip
           unzip terraform_${TERRAFORM_VERSION}_linux_amd64.zip
           sudo mv terraform /usr/local/bin
