chore: remove old terraform tests
Signed-off-by: Charles-Edouard Brétéché <charled.breteche@gmail.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,4 +40,4 @@ jobs:
           key: go-mod
       - name: Build install and validate against examples
         run: |
-          make examples-15
+          make examples
