--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -9,7 +9,7 @@ builds:
     flags:
       - -trimpath
     ldflags:
-      - '-s -w -X main.version={{.Version}} -X main.commit={{.Commit}}'
+      - -s -w -X version.BuildVersion={{.Version}} -X version.BuildCommit={{.Commit}} -X version.BuildDate={{.Date}} -X version.BuiltBy=goreleaser
     goos:
       - freebsd
       - windows
