--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -9,7 +9,12 @@ builds:
     flags:
       - -trimpath
     ldflags:
-      - -s -w -X version.BuildVersion={{.Version}} -X version.BuildCommit={{.Commit}} -X version.BuildDate={{.Date}} -X version.BuiltBy=goreleaser
+      - -s
+      - -w
+      - -X 'github.com/eddycharly/terraform-provider-kops/pkg/version.BuildVersion={{.Version}}'
+      - -X 'github.com/eddycharly/terraform-provider-kops/pkg/version.BuildCommit={{.Commit}}'
+      - -X 'github.com/eddycharly/terraform-provider-kops/pkg/version.BuildDate={{.Date}}'
+      - -X 'github.com/eddycharly/terraform-provider-kops/pkg/version.BuiltBy=goreleaser'
     goos:
       - freebsd
       - windows
