chore: update rules for PR workflows
Signed-off-by: Charles-Edouard Brétéché <charled.breteche@gmail.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,9 +8,9 @@ on:
     tags-ignore:
       - "*"
   pull_request:
-    types:
-      - opened
-      - reopened
+    branches:
+      - main
+      - v*
 
 jobs:
   build:
