--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        tf-version: [0.15.5, 1.0.11, 1.1.9, 1.2.9]
+        tf-version: [0.15.5, 1.0.11, 1.1.9, 1.2.9, 1.3.9, 1.4.2]
     runs-on: ubuntu-latest
     steps:
       - name: Install terraform
