chore: don't build on push (#954)
* chore: don't build on push

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

* cancel

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

---------

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,16 +1,14 @@
 name: Build
 
 on:
-  push:
-    branches:
-      - main
-      - v*
-    tags-ignore:
-      - "*"
   pull_request:
     branches:
       - main
       - v*
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
